<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">I\'M LOST</string>
    <string name="action_settings">Settings</string>
    <string name="exit_text">EXIT</string>
    <string name="my_info">My info</string>
    <string name="emergency_call">Emergency Call</string>
    <string name="help">Help</string>
    <string name="find_my_location">Find my location</string>
    <string name="title_activity_make_acall">MakeACall</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_personal__information">Personal_Information</string>
    <string name="goback">Go Back</string>
    <string name="fullname">Fullname</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="emergencycontact">Emergency Contact</string>
    <string name="title_activity_sms_sending">sms_sending</string>

    <string name="hello_world">Hello world!</string>


</resources>
