<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.phoebe.helpim_lost.Personal_Information"
    android:orientation="vertical"
    android:background="#9494B8">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:textAlignment="center"
        android:background="#CACADC"
        android:paddingTop="10dp">

        <TextClock
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/textClock"
            android:textSize="60dp"
            android:textAlignment="gravity"
            android:paddingStart="200dp"
            android:layout_gravity="top"
            android:paddingBottom="10dp" />
    </LinearLayout>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullname"
            android:id="@+id/fullname"
            android:textSize="40dp"
            android:textStyle="bold"
            android:gravity="top"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fullnametxt"
            android:textSize="40dp"
            android:background="#CACABC"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:textColor="#6600CC" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:id="@+id/age"
            android:textSize="40dp"
            android:textStyle="bold"
            android:gravity="top"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/agetxt"
            android:textSize="40dp"
            android:background="#CACABC"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:textColor="#6600CC" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:id="@+id/address"
            android:textSize="40dp"
            android:textStyle="bold"
            android:gravity="top"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addresstxt"
            android:textSize="40dp"
            android:background="#CACABC"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:textColor="#6600CC"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emergencycontact"
            android:id="@+id/textView4"
            android:textSize="40dp"
            android:textStyle="bold"
            android:gravity="top"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emergencycontacttxt"
            android:textSize="40dp"
            android:background="#CACABC"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:textColor="#6600CC"  />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/goback"
                android:id="@+id/goback"
                android:textSize="50dp"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
