<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:weightSum="100"
    android:orientation="vertical"
    android:background="#9494B8">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:textAlignment="center"
        android:background="#CACADC"
        android:paddingTop="10dp">

        <TextClock
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/textClock"
            android:textSize="60dp"
            android:textAlignment="gravity"
            android:paddingStart="200dp"
            android:layout_gravity="top"
            android:paddingBottom="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/questionmark"
            android:layout_weight="1"
            android:src="@drawable/question"
            android:scaleType="fitCenter"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:clickable="true" />


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phone"
            android:layout_weight="1"
            android:src="@drawable/phone"
            android:scaleType="fitCenter"
            android:layout_marginRight="10dp"
            android:paddingRight="20dp"
            android:clickable="true" />


        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/infotxt"
            android:layout_weight="1"
            android:text="@string/my_info"
            android:layout_gravity="bottom"
            android:textSize="40dp"
            android:textIsSelectable="true"
            android:textStyle="bold"

            android:paddingLeft="45dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emergcalltxt"
            android:layout_weight="1"
            android:text="@string/emergency_call"
            android:layout_gravity="bottom"
            android:textSize="35dp"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:textAlignment="center"
            android:paddingLeft="60dp" />



    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/help"
            android:layout_weight="1"
            android:src="@drawable/help"
            android:scaleType="fitCenter"
            android:clickable="true" />



        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/map"
            android:layout_weight="1"
            android:src="@drawable/pinmap"
            android:scaleType="fitCenter"
            android:clickable="true" />
      </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/helptxt"
            android:text="@string/help"
            android:layout_gravity="bottom"
            android:textSize="40dp"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:paddingLeft="100dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/maptxt"
            android:text="@string/find_my_location"
            android:layout_gravity="bottom"
            android:textSize="35dp"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_weight="1"
            android:paddingLeft="100dp" />

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="bottom"
        android:layout_weight="0">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit_text"
                android:id="@+id/exit"
                android:textSize="50dp"
                android:textAlignment="center" />
        </LinearLayout>


</LinearLayout>

